Fixed Hamburger Menu z-index

--- a/DepartureBoardWeb/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/DepartureBoardWeb/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -61,3 +61,7 @@ html {
 .mat-drawer-container {
   background-color: var(--backgroundColour);
 }
+
+#nav-hamburger-button {
+  z-index: 20;
+}
